--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scripts": {
       "start": "node index.js",
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start2": "nodemon server/index.js"
+      "start2": "nodemon index.js"
     }
   }
   
