--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
       "uuid": "^8.3.2"
     },
     "scripts": {
-      "start": "node index.js",
+      "start": "node server/server.js",
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start2": "nodemon index.js"
+      "start2": "nodemon server/server.js"
     }
   }
   
